# GTASA_alternative_code

./: .clang-format  .dockerignore  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CPPProject.mk  Dockerfile  Dockerfile_dev  GTA_SA_cheat_finder.cpp  GTA_SA_cheat_finder.cxx  GTA_SA_cheat_finder.hpp  HACKING.md  LICENSE  Makefile  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  codespell-ignore.txt  codespell.ignore-words.txt  dir_49e56c817e5e54854c35e136979f97ca.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_ef3b2545113449f8f25e623a543d64e3.html  docker.py  files.html  gta__sa__lib_8cpp.html  gta__sa__lib_8hpp.html  index.html  main_8cpp.html  modules.html  namespacegta.html  namespaces.html  pages.html  project-include-after.cmake  searchdata-v1.js
.devcontainer/: DockerImages.mk  Makefile  devcontainer.json  docker-compose.yaml
builder/: cmake-builder.sh  dockcross-builder.sh  ninja-builder.sh
cmake/: ConfigureCCache.cmake  ConfigureCXX_Version.cmake  coverage.cmake  dev-mode.cmake  install-config.cmake  install-rules.cmake  install-script.cmake  spell.cmake  variables.cmake
old/: .gitignore  CMakeLists.txt  README.md
old/cmake/: ConfigureLTO.cmake  ConfigureOpenMP.cmake
old/src/: GTA_SA_cheat_finder.cpp  GTA_SA_cheat_finder.hpp
qml/: GTA_SA.qml  about.qml  graphic.qml  home.qml  image.qml  main.qml  responsive.qml  settings.qml  swipe.qml  table.qml
qml/AppLib/: CMakeLists.txt
qml/AppLib/cmake/lib/: backward-cpp.cmake  benchmark.cmake  boost.cmake  drogon.cmake  json.cmake  opencv.cmake  openmp.cmake  perlin_noise.cmake  pybind11.cmake  raygui.cmake  raylib.cmake  spdlog.cmake  vector.cmake
qml/AppLib/cmake/utile/: ccache.cmake  distcc.cmake  lto.cmake  ninja_color.cmake  sccache.cmake
qml/AppLib/qml/: CustomMenuSeparator.qml  ProportionalRect.qml
qml/AppLib/source/applib/plugin/: AppLibplugin_AppLibPlugin.cpp
source/: GTA_SA_cheat_finder.cpp  GTA_SA_cheat_finder.hpp  TableModel.cpp  TableModel.h  about_compilation.cpp  about_compilation.h  gta_sa_ui.h  (+19 more)
source/GTASA_alternative_code/: CMakeLists.txt  GTASAEngine.cpp  GTASAEngine.hpp  GTASARequest.cpp  GTASARequest.hpp  GTASAResult.cpp  GTASAResult.hpp  GTA_SA_engine.cpp  GTA_SA_engine.hpp
source/GTASA_alternative_code/cuda/: generateString.cu  generateString.cuh  wrapper.cu  wrapper.hpp
source/GTASA_alternative_code/module/: GTASAModule.cpp  GTASAModule.hpp  GTASAModuleCUDA.cpp  GTASAModuleCUDA.hpp  GTASAModuleOpenCL.hpp  GTASAModuleOpenMP.cpp  GTASAModuleOpenMP.hpp  GTASAModuleThreadpool.cpp  GTASAModuleThreadpool.hpp
source/GTASA_alternative_code/module/cuda/: GTASAModuleCUDA.cpp  GTASAModuleCUDA.hpp
source/GTASA_alternative_code/module/cuda/kernel/: CMakeLists.txt  jamcrc.cu  jamcrc.cuh  wrapper.hpp
source/GTASA_alternative_code/module/mono/: GTASAModuleMono.cpp  GTASAModuleMono.hpp
source/GTASA_alternative_code/module/opencl/: GTASAModuleOpenCL.cpp  GTASAModuleOpenCL.hpp
source/GTASA_alternative_code/module/opencl/opencl/: CMakeLists.txt  kernel.cpp  kernel.hpp
source/GTASA_alternative_code/module/openmp/: GTASAModuleOpenMP.cpp  GTASAModuleOpenMP.hpp
source/GTASA_alternative_code/module/threadpool/: GTASAModuleThreadpool.cpp  GTASAModuleThreadpool.hpp
source/GTASA_alternative_code/opencl/: wrapper.hpp
source/GTASA_alternative_code/state/: GTASA_alternative_code_cuda.cpp  GTASA_alternative_code_cuda.hpp  GTASA_alternative_code_opencl.cpp  GTASA_alternative_code_opencl.hpp  GTASA_alternative_code_openmp.cpp  GTASA_alternative_code_openmp.hpp  GTASA_alternative_code_stdthread.cpp  GTASA_alternative_code_stdthread.hpp  GTASA_alternative_code_virtual.cpp
source/cuda/: CMakeLists.txt  kernel.cu  kernel.cuh  wrapper.cu  wrapper.hpp
source/gta_cheat_finder/: CMakeLists.txt  GTASAEngine.cpp  GTASAEngine.hpp  GTASARequest.cpp  GTASARequest.hpp  GTASAResult.cpp  GTASAResult.hpp  GTA_SA_cheat_finder_main.cpp  GTA_SA_cheat_finder_main.hpp  GTA_SA_cheat_finder_result.cpp  GTA_SA_cheat_finder_result.hpp  GTA_SA_engine.hpp
source/gta_cheat_finder/cuda/: CMakeLists.txt  jamcrc.cu  jamcrc.cuh  kernel.cu  kernel.cuh  wrapper.cu  wrapper.hpp
source/gta_cheat_finder/module/: GTASAModuleCUDA.cpp  GTASAModuleCUDA.hpp  GTASAModuleOpenCL.cpp  GTASAModuleOpenCL.hpp  GTASAModuleOpenMP.cpp  GTASAModuleOpenMP.hpp  GTASAModuleThreadpool.cpp  GTASAModuleThreadpool.hpp  GTASAModuleVirtual.cpp  GTASAModuleVirtual.hpp  GTA_SA_cheat_finder_cuda.cpp  GTA_SA_cheat_finder_cuda.hpp  GTA_SA_cheat_finder_opencl.cpp  GTA_SA_cheat_finder_opencl.hpp  GTA_SA_cheat_finder_openmp.cpp  GTA_SA_cheat_finder_openmp.hpp  GTA_SA_cheat_finder_stdthread.cpp  GTA_SA_cheat_finder_stdthread.hpp
source/gta_cheat_finder/opencl/: CMakeLists.txt  jamcrc.cl  kernel.cpp  kernel.hpp  wrapper.cpp  wrapper.hpp
source/gta_cheat_finder/state/: GTA_SA_cheat_finder_cuda.cpp  GTA_SA_cheat_finder_cuda.hpp  GTA_SA_cheat_finder_opencl.cpp  GTA_SA_cheat_finder_opencl.hpp  GTA_SA_cheat_finder_openmp.cpp  GTA_SA_cheat_finder_openmp.hpp  GTA_SA_cheat_finder_stdthread.cpp  GTA_SA_cheat_finder_stdthread.hpp  GTA_SA_cheat_finder_virtual.cpp  GTA_SA_cheat_finder_virtual.hpp
source/qt-utils/: CMakeLists.txt  TableModel.cpp  TableModel.h  imageprovider.cpp  imageprovider.h  liveimage.cpp  liveimage.h
source/qt-utils/asyncimageprovider/: async_image_response.h  async_image_response_runnable.h  asyncimageprovider.h
source/qt-utils/imageprovider/: imageprovider.cpp  imageprovider.h
source/utils/: CMakeLists.txt  about_compilation.h  compilation.cpp  compilation.hpp  type.h  utils.h
test/: CMakeLists.txt
test/source/: GTA_SA_cheat_finder_test.cpp  find_string_inv.cpp  find_string_inv_bench.cpp  find_string_inv_test.cpp  gta_sa_bench.cpp  gta_sa_test.cpp  jamcrc.cpp  jamcrc_bench.cpp  jamcrc_test.cpp  main.cpp  precompute_crc.cpp
test/source/benchmark/: find_string_inv_bench.cpp  gta_sa_bench.cpp  jamcrc_bench.cpp
test/source/test/: find_string_inv_test.cpp  gta_sa_test.cpp  gta_sa_test_cuda.cpp  gta_sa_test_openmp.cpp  gta_sa_test_threadpool.cpp  jamcrc_test.cpp
(+55 files in other folders)
